--- a/tunnel/build.gradle
+++ b/tunnel/build.gradle
@@ -7,6 +7,7 @@ group groupName
 
 android {
     compileSdkVersion 30
+    ndkVersion "24.0.7956693"
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
