ui: exclude TunnelToggleActivity from recents
Fixes annoying behavior in quick settings widget, when you enable
the tunnel, try to switch to last used app, but instead it switches to
the toggle activity and turns the tunnel off.

Signed-off-by: Rin Patch <rin@patch.cx>
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/ui/src/main/AndroidManifest.xml
+++ b/ui/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
 
         <activity
             android:name=".activity.TunnelToggleActivity"
-            android:theme="@style/NoBackgroundTheme" />
+            android:theme="@style/NoBackgroundTheme"
+            android:excludeFromRecents="true"/>
 
         <activity android:name=".activity.MainActivity">
             <intent-filter>
