--- a/ui/src/main/AndroidManifest.xml
+++ b/ui/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity
             android:name=".activity.TunnelToggleActivity"
             android:theme="@style/NoBackgroundTheme"
+            android:taskAffinity="${applicationId}.TunnelToggle"
             android:excludeFromRecents="true"/>
 
         <activity android:name=".activity.MainActivity">
