--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
         materialComponentsVersion = '1.6.1'
         preferenceVersion = '1.2.0'
         zxingEmbeddedVersion = '4.3.0'
+        shortcutsVersion = '1.0.0'
 
         groupName = 'com.wireguard.android'
     }
