gradle: use same NDK for tunnel and UI
Fixes: 4f261560 ("gradle: force the use of an older NDK version")
Signed-off-by: L.W.Reek <syphyr@gmail.com>
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -13,6 +13,7 @@ final def keystorePropertiesFile = rootProject.file("keystore.properties")
 
 android {
     compileSdk 33
+    ndkVersion "21.4.7075529"
     buildFeatures {
         buildConfig = true
         dataBinding = true
