gradle: adjust for and raise compileSdk to 33
Signed-off-by: SlipkHunter <abrito025@gmail.com>
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/tunnel/build.gradle
+++ b/tunnel/build.gradle
@@ -6,7 +6,7 @@ version wireguardVersionName
 group groupName
 
 android {
-    compileSdkVersion 31
+    compileSdk 33
     ndkVersion '21.4.7075529'
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
