--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -12,7 +12,7 @@ group groupName
 final def keystorePropertiesFile = rootProject.file("keystore.properties")
 
 android {
-    compileSdkVersion 31
+    compileSdk 33
     buildFeatures {
         buildConfig = true
         dataBinding = true
