gradle: update compileSdk and small fixes
Signed-off-by: SlipkHunter <abrito025@gmail.com>

--- a/tunnel/build.gradle
+++ b/tunnel/build.gradle
@@ -6,7 +6,7 @@ version wireguardVersionName
 group groupName
 
 android {
-    compileSdkVersion 31
+    compileSdk 33
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
