--- a/tunnel/build.gradle
+++ b/tunnel/build.gradle
@@ -7,6 +7,7 @@ group groupName
 
 android {
     compileSdkVersion 31
+    ndkVersion '21.4.7075529'
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
