gradle: migrate to namespace attribute
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/tunnel/build.gradle
+++ b/tunnel/build.gradle
@@ -12,6 +12,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.wireguard.android.tunnel'
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 31
