build: update to gradle 7.4.2 and restructure lint block
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/tunnel/build.gradle
+++ b/tunnel/build.gradle
@@ -45,9 +45,8 @@ android {
             }
         }
     }
-    lintOptions {
-        disable('LongLogTag')
-        disable('NewApi') // Desugaring!
+    lint {
+        disable 'LongLogTag', 'NewApi'
     }
 }
 
