--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 pluginManagement {
-    def agpVersion = "7.4.0"
+    def agpVersion = '7.4.2'
     def kotlinVersion = "1.8.0"
     repositories {
         gradlePluginPortal()
