ui: bring back donation button
For Google Play Store builds, we'll display an alert box. This was
inspired by the discussion around StreetComplete; hopefully we'll have a
similar okay outcome.

Link: https://github.com/streetcomplete/streetcomplete/issues/3768
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -48,6 +48,9 @@ android {
         }
     }
     buildTypes {
+        all {
+            buildConfigField('boolean', 'IS_GOOGLE_PLAY', (findProperty('build.google_play') == 'true').toString())
+        }
         release {
             if (keystorePropertiesFile.exists()) signingConfig signingConfigs.release
             minifyEnabled true
