--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         collectionVersion = '1.2.0'
         constraintLayoutVersion = '2.1.4'
         coordinatorLayoutVersion = '1.2.0'
-        coreKtxVersion = '1.9.0'
+        coreKtxVersion = '1.10.0-rc01'
         coroutinesVersion = '1.6.4'
         datastoreVersion = '1.0.0'
         desugarVersion = '1.1.5'
