gradle: opt into new publishing APIs
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/gradle.properties
+++ b/gradle.properties
@@ -42,6 +42,8 @@ android.generateManifestClass=true
 android.experimental.enableSourceSetPathsMap=true
 # Use relative paths for better Gradle caching of library build tasks
 android.experimental.cacheCompileLibResources=true
+# Disable automatic creation of publishing components
+android.disableAutomaticComponentCreation=true
 
 # Default Android build features
 # Disable BuildConfig generation by default
