--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -55,6 +55,10 @@ android {
             if (keystorePropertiesFile.exists()) signingConfig signingConfigs.release
             minifyEnabled true
             proguardFiles "proguard-android-optimize.txt", "proguard-rules.pro"
+            packagingOptions {
+                exclude "DebugProbesKt.bin"
+                exclude "kotlin-tooling-metadata.json"
+            }
         }
         debug {
             applicationIdSuffix ".debug"
