tools: remove cmake dependency hack
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/tunnel/build.gradle
+++ b/tunnel/build.gradle
@@ -32,6 +32,7 @@ android {
         release {
             externalNativeBuild {
                 cmake {
+                    targets 'libwg-go.so', 'libwg.so', 'libwg-quick.so'
                     arguments "-DANDROID_PACKAGE_NAME=${groupName}", "-DGRADLE_USER_HOME=${project.gradle.gradleUserHomeDir}"
                 }
             }
@@ -39,6 +40,7 @@ android {
         debug {
             externalNativeBuild {
                 cmake {
+                    targets 'libwg-go.so', 'libwg.so', 'libwg-quick.so'
                     arguments "-DANDROID_PACKAGE_NAME=${groupName}.debug", "-DGRADLE_USER_HOME=${project.gradle.gradleUserHomeDir}"
                 }
             }
