build: bump deps
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,20 @@
 buildscript {
     ext {
-        activityVersion = '1.6.1'
+        activityVersion = '1.7.0'
         annotationsVersion = '1.6.0'
         appcompatVersion = '1.6.1'
         biometricVersion = '1.1.0'
         collectionVersion = '1.2.0'
         constraintLayoutVersion = '2.1.4'
         coordinatorLayoutVersion = '1.2.0'
-        coreKtxVersion = '1.10.0-rc01'
+        coreKtxVersion = '1.10.0'
         coroutinesVersion = '1.6.4'
         datastoreVersion = '1.0.0'
         desugarVersion = '1.1.5'
-        fragmentVersion = '1.5.5'
+        fragmentVersion = '1.5.6'
         jsr305Version = '3.0.2'
         junitVersion = '4.13.2'
-        lifecycleRuntimeKtxVersion = '2.6.0'
+        lifecycleRuntimeKtxVersion = '2.6.1'
         materialComponentsVersion = '1.8.0'
         preferenceVersion = '1.2.0'
         zxingEmbeddedVersion = '4.3.0'
