--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -33,6 +33,7 @@ android {
     buildTypes {
         release {
             minifyEnabled true
+            shrinkResources true
             proguardFiles "proguard-android-optimize.txt", "proguard-rules.pro"
             packagingOptions {
                 exclude "DebugProbesKt.bin"
