--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -49,6 +49,9 @@ android {
         disable 'LongLogTag'
         warning 'MissingTranslation', 'ImpliedQuantity'
     }
+    androidResources {
+        generateLocaleConfig true
+    }
 }
 
 dependencies {
