gradle: trim experimental list
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -59,8 +59,8 @@ android.library.defaults.buildfeatures.androidresources=false
 
 # Suppress warnings for some features that aren't yet stabilized
 android.suppressUnsupportedOptionWarnings=android.keepWorkerActionServicesBetweenBuilds,\
-  android.experimental.enableNewResourceShrinker,android.experimental.enableNewResourceShrinker.preciseShrinking,\
-  android.enableAppCompileTimeRClass,android.experimental.enableSourceSetPathsMap,android.experimental.cacheCompileLibResources,\
+  android.experimental.enableNewResourceShrinker.preciseShrinking,\
+  android.enableAppCompileTimeRClass,\
   android.suppressUnsupportedOptionWarnings
 
 # OSSRH sometimes struggles with slow deployments, so this makes Gradle
