gradle: convert build files to Kotlin
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/gradle.properties
+++ b/gradle.properties
@@ -63,6 +63,9 @@ android.suppressUnsupportedOptionWarnings=android.keepWorkerActionServicesBetwee
   android.enableAppCompileTimeRClass,\
   android.suppressUnsupportedOptionWarnings
 
+wireguardVersionCode=501
+wireguardVersionName=1.0.20230502
+
 # OSSRH sometimes struggles with slow deployments, so this makes Gradle
 # more tolerant to those delays.
 systemProp.org.gradle.internal.http.connectionTimeout=500000
