gradle: reabstract package name
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
+wireguardVersionCode=501
+wireguardVersionName=1.0.20230502
+wireguardPackageName=com.wireguard.android
+
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -62,9 +66,6 @@ android.suppressUnsupportedOptionWarnings=android.keepWorkerActionServicesBetwee
   android.experimental.enableNewResourceShrinker.preciseShrinking,\
   android.enableAppCompileTimeRClass,\
   android.suppressUnsupportedOptionWarnings
-
-wireguardVersionCode=501
-wireguardVersionName=1.0.20230502
 
 # OSSRH sometimes struggles with slow deployments, so this makes Gradle
 # more tolerant to those delays.
