--- a/ui/src/googleplay/AndroidManifest.xml
+++ b/ui/src/googleplay/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" tools:node="remove" />
+
+    <uses-permission
+        android:name="android.permission.REQUEST_INSTALL_PACKAGES"
+        tools:node="remove" />
     <application>
-       <receiver android:name=".updater.Updater$AppUpdatedReceiver" tools:node="remove" />
+        <receiver
+            android:name=".updater.Updater$AppUpdatedReceiver"
+            tools:node="remove" />
     </application>
 </manifest>
