--- a/ui/src/main/res/raw/msal_config.json
+++ b/ui/src/main/res/raw/msal_config.json
@@ -1,15 +1,14 @@
 {
-  "client_id" : "33f8bdd0-ddb6-4f0f-8b40-2a958b02b2f3",
+  "client_id" : "f1373772-6623-4090-9204-3cb04b9d46c9",
   "authorization_user_agent" : "DEFAULT",
+  "account_mode": "SINGLE",
   "redirect_uri" : "msauth://com.jimberisolation.android/ogbJiyyBm5ReTVOMgxI1kiBZ2eE%3D",
-  "broker_redirect_uri_registered": true,
-  "account_mode" : "SINGLE",
   "authorities" : [
     {
       "type": "AAD",
       "audience": {
-        "type": "AzureADMyOrg",
-        "tenant_id": "68e767ea-24db-4f44-bbf7-f5b9f5fe703a"
+        "type": "AzureADandPersonalMicrosoftAccount",
+        "tenant_id": "common"
       }
     }
   ]
