--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,25 @@
 [versions]
-agp = "8.2.0-beta06"
-kotlin = "1.9.0"
+agp = "8.6.0"
+kotlin = "2.0.20"
 
 [libraries]
-androidx-activity-ktx = "androidx.activity:activity-ktx:1.8.0"
-androidx-annotation = "androidx.annotation:annotation:1.7.0"
-androidx-appcompat = "androidx.appcompat:appcompat:1.6.1"
+androidx-activity-ktx = "androidx.activity:activity-ktx:1.9.2"
+androidx-annotation = "androidx.annotation:annotation:1.8.2"
+androidx-appcompat = "androidx.appcompat:appcompat:1.7.0"
 androidx-biometric = "androidx.biometric:biometric:1.1.0"
-androidx-collection = "androidx.collection:collection:1.3.0"
+androidx-collection = "androidx.collection:collection:1.4.3"
 androidx-constraintlayout = "androidx.constraintlayout:constraintlayout:2.1.4"
 androidx-coordinatorlayout = "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
-androidx-core-ktx = "androidx.core:core-ktx:1.12.0"
-androidx-datastore-preferences = "androidx.datastore:datastore-preferences:1.0.0"
-androidx-fragment-ktx = "androidx.fragment:fragment-ktx:1.6.1"
-androidx-lifecycle-runtime-ktx = "androidx.lifecycle:lifecycle-runtime-ktx:2.6.2"
+androidx-core-ktx = "androidx.core:core-ktx:1.13.1"
+androidx-datastore-preferences = "androidx.datastore:datastore-preferences:1.1.1"
+androidx-fragment-ktx = "androidx.fragment:fragment-ktx:1.8.3"
+androidx-lifecycle-runtime-ktx = "androidx.lifecycle:lifecycle-runtime-ktx:2.8.5"
 androidx-preference-ktx = "androidx.preference:preference-ktx:1.2.1"
-desugarJdkLibs = "com.android.tools:desugar_jdk_libs:2.0.3"
-google-material = "com.google.android.material:material:1.10.0"
+desugarJdkLibs = "com.android.tools:desugar_jdk_libs:2.1.2"
+google-material = "com.google.android.material:material:1.12.0"
 jsr305 = "com.google.code.findbugs:jsr305:3.0.2"
 junit = "junit:junit:4.13.2"
-kotlinx-coroutines-android = "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0"
+kotlinx-coroutines-android = "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1"
 zxing-android-embedded = "com.journeyapps:zxing-android-embedded:4.3.0"
 
 [plugins]
