feature(auth): fixes with r8

--- a/environments/staging/AndroidManifest.xml
+++ b/environments/staging/AndroidManifest.xml
@@ -75,7 +75,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data
-                    android:host="com.jimberisolation.android"
+                    android:host="com.jimberisolation.android.debug"
                     android:path="/lvGC0B4SWYU8tNPHg/bdMjQinZQ="
                     android:scheme="msauth" />
             </intent-filter>
