--- a/environments/staging/msal_config.json
+++ b/environments/staging/msal_config.json
@@ -2,7 +2,7 @@
     "client_id" : "f1373772-6623-4090-9204-3cb04b9d46c9",
     "authorization_user_agent" : "DEFAULT",
     "account_mode": "SINGLE",
-    "redirect_uri" : "msauth://com.jimberisolation.android.debug/lvGC0B4SWYU8tNPHg%2FbdMjQinZQ%3D",
+    "redirect_uri" : "msauth://com.jimberisolation.android.debug/MCB8%2BE3n89VFqq8DF3GqGdoMllI%3D",
     "authorities" : [
       {
         "type": "AAD",
