--- a/ui/src/main/res/raw/msal_config.json
+++ b/ui/src/main/res/raw/msal_config.json
@@ -2,7 +2,7 @@
     "client_id" : "f1373772-6623-4090-9204-3cb04b9d46c9",
     "authorization_user_agent" : "DEFAULT",
     "account_mode": "SINGLE",
-    "redirect_uri" : "msauth://com.jimberisolation.android/BAhPO5r6%2BgArwttJYkjO2isMw1A%3D",
+    "redirect_uri" : "msauth://com.jimberisolation.android/HZxcpyHnYFiwBvLl%2FvVFCzUOYzU%3D",
     "authorities" : [
       {
         "type": "AAD",
