feature(auth): last fixes

--- a/ui/src/main/AndroidManifest.xml
+++ b/ui/src/main/AndroidManifest.xml
@@ -75,8 +75,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data
-                    android:host="com.jimberisolation.android"
-                    android:path="/HZxcpyHnYFiwBvLl/vVFCzUOYzU="
+                    android:host="com.jimberisolation.android.debug"
+                    android:path="/MCB8+E3n89VFqq8DF3GqGdoMllI="
                     android:scheme="msauth" />
             </intent-filter>
         </activity>
