--- a/ui/src/main/AndroidManifest.xml
+++ b/ui/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:networkSecurityConfig="@xml/network_security_config">
 
         <activity
             android:name=".activity.TunnelToggleActivity"
@@ -76,7 +77,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data
                     android:host="com.jimberisolation.android"
-                    android:path="/HZxcpyHnYFiwBvLl/vVFCzUOYzU="
+                    android:path="/MCB8+E3n89VFqq8DF3GqGdoMllI="
                     android:scheme="msauth" />
             </intent-filter>
         </activity>
