different environemnts msal fixing

--- a/environments/production/AndroidManifest.xml
+++ b/environments/production/AndroidManifest.xml
@@ -41,7 +41,7 @@
         android:allowBackup="false"
         android:enableOnBackInvokedCallback="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Jimber SASE"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
