--- a/environments/local/AndroidManifest.xml
+++ b/environments/local/AndroidManifest.xml
@@ -41,7 +41,7 @@
         android:allowBackup="false"
         android:enableOnBackInvokedCallback="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Local Jimber SASE"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:networkSecurityConfig="@xml/network_security_config">
@@ -76,7 +76,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data
-                    android:host="com.jimberisolation.android"
+                    android:host="com.jimberisolation.android.debug"
                     android:path="/MCB8+E3n89VFqq8DF3GqGdoMllI="
                     android:scheme="msauth" />
             </intent-filter>
