gradle: migrate publishing to Maven Central Portal
Signed-off-by: Eric Offermann <eoffermann@ridgelineintl.com>

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,3 +27,4 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+maven-publish = { id = "com.vanniktech.maven.publish", version = "0.34.0" }
