For API>=31 the old XML is deprecated and we should be using dataExtractionRules

--- a/ui/src/main/AndroidManifest.xml
+++ b/ui/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         android:name=".Application"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup"
+        android:dataExtractionRules="@xml/dataExtractionRules"
         android:banner="@mipmap/banner"
         android:enableOnBackInvokedCallback="true"
         android:icon="@mipmap/ic_launcher"
