--- a/gradle.properties
+++ b/gradle.properties
@@ -47,3 +47,6 @@ android.suppressUnsupportedOptionWarnings=android.keepWorkerActionServicesBetwee
 # more tolerant to those delays.
 systemProp.org.gradle.internal.http.connectionTimeout=500000
 systemProp.org.gradle.internal.http.socketTimeout=500000
+
+# Use Java toolchain to auto-provision JDK 17
+org.gradle.java.installations.auto-download=true
